--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "build": "^0.1.4",
     "core-js": "^3.8.3",
+    "gh-pages": "^4.0.0",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
